# Khromium

./: build.gradle.kts  build_native.ps1  build_native.sh  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
src/main/antlr/: HTMLLexer.g4  HTMLParser.g4  KScript.g4
src/main/cpp/: CMakeLists.txt  KhromiumMem.cpp  QuickJSBridge.cpp
src/main/cpp/sys/: time.h
src/main/kotlin/io/github/jwyoon1220/khromium/: HexEditorPanel.kt  KComponent.kt  Main.kt
src/main/kotlin/io/github/jwyoon1220/khromium/core/: CookieStore.kt  FaultRetryPolicy.kt  KProcess.kt  NativeMemoryManager.kt  OpaqueHandleManager.kt  PhysicalMemoryManager.kt  SecurityBreachException.kt  VMMAllocator.kt  VirtualMemoryManager.kt
src/main/kotlin/io/github/jwyoon1220/khromium/css/: CSSParser.kt  CSSStyle.kt
src/main/kotlin/io/github/jwyoon1220/khromium/dom/: HTMLDOMBuilder.kt  JsoupDOMBuilder.kt  KDOM.kt
src/main/kotlin/io/github/jwyoon1220/khromium/js/: DomBridge.kt  EvictionDaemon.kt  KhromiumJsRuntime.kt  KhromiumScriptEngine.kt  NashornEngine.kt  QuickJSEngine.kt  SharedBytecodeCache.kt
src/main/kotlin/io/github/jwyoon1220/khromium/net/: KhromiumNetworkClient.kt  KhromiumRequest.kt  KhromiumResponse.kt
src/main/resources/: logback.xml
src/test/kotlin/io/github/jwyoon1220/khromium/: CSSParserTest.kt  CanarySecurityTest.kt  FaultRetryPolicyTest.kt  JsEngineAndDomBridgeTest.kt  JsoupDOMBuilderTest.kt  MajorWebSiteTest.kt  MemoryArchitectureTest.kt  NetworkClientTest.kt  SecurityComponentsTest.kt  SharedBytecodeCacheTest.kt  VMMAllocatorTest.kt
(+2 files in other folders)
